# reggie-build-scripts-py

./: AGENT_README.md  README.md  pyproject.toml
.githooks/: pre-commit
cool-dude/: pyproject.toml
src/reggie_build/: __init__.py  app.py  clean.py  cli.py  command.py  config.py  create.py  openapi.py  projects.py  pyproject.py  readme.py  sync.py  utils.py  workspace.py  workspace_create.py  workspace_sync.py  workspaces.py
src/reggie_build/openapi_template/: main.jinja
