[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-build"
version = "0.0.1+gad49d06"
description = "Local build utilities"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.10",
    "tomlkit",
    "packaging",
    "click<8.2.0", # https://github.com/koxudaxi/fastapi-code-generator/issues/495
    "typer[standard]",
    "fastapi-code-generator",
    "requests"
]

[project.scripts]
reggie-build = "reggie_build.app:main"

[dependency-groups]
dev = ["pytest"]
