[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "reggie-build"
version = "0.0.1+gdc571e6"
description = "Local build utilities"
requires-python = ">=3.12,<3.14"
dependencies = ["uv>=0.9.9", "tomlkit", "requests", "typer"]

[project.scripts]
reggie-build = "reggie_build.app:main"

[dependency-groups]
dev = ["pytest"]
